# HWW13

django/: pyproject.toml
django/hw_project/hw_project/: settings.py  urls.py
django/hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
django/hw_project/quotes/migrations/: 0001_initial.py  0002_rename_descriprion_author_description.py
django/hw_project/quotes/static/quotes/: style.css
django/hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  detail.html  index.html
django/hw_project/users/: forms.py  urls.py  views.py
django/hw_project/users/templates/users/: login.html
django/hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
fastapi/: main.py  pyproject.toml
fastapi/src/conf/: config.py
fastapi/src/repository/: contacts.py  users.py
fastapi/src/routes/: auth.py  contacts.py
fastapi/src/services/: auth.py  email.py
